--- a/content/data/config.json
+++ b/content/data/config.json
@@ -53,5 +53,6 @@
                 "new_window": true
             }
         ]
-    }
+    },
+    "domain": "https://royal-primrose-d4856.netlify.app"
 }
